WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103662
[V8] DOM callbacks shouldn't reimplement ScopedPersistent they should use it
https://bugs.webkit.org/show_bug.cgi?id=103662
Summary
[V8] DOM callbacks shouldn't reimplement ScopedPersistent they should use it
Adam Barth
Reported
2012-11-29 12:43:53 PST
[V8] DOM callbacks shouldn't reimplement ScopedPersistent they should use it
Attachments
Patch
(10.76 KB, patch)
2012-11-29 12:45 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-11-29 12:45:19 PST
Created
attachment 176792
[details]
Patch
Adam Klein
Comment 2
2012-11-29 12:51:49 PST
Comment on
attachment 176792
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=176792&action=review
> Source/WebCore/bindings/scripts/CodeGeneratorV8.pm:3360 > + m_callback.get().MakeWeak(this, &${v8InterfaceName}::weakCallback);
Nit, you can use operator-> here
Adam Barth
Comment 3
2012-11-29 13:38:21 PST
(In reply to
comment #2
)
> (From update of
attachment 176792
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=176792&action=review
> > > Source/WebCore/bindings/scripts/CodeGeneratorV8.pm:3360 > > + m_callback.get().MakeWeak(this, &${v8InterfaceName}::weakCallback); > > Nit, you can use operator-> here
I need to call a function on the Handle itself, not the underlying object. I'm pretty sure I made -> give you back the underlying object.
Adam Barth
Comment 4
2012-11-29 13:43:55 PST
In file included from gen/webkit/bindings/V8DerivedSources02.cpp:45: gen/webcore/bindings/V8NavigatorUserMediaErrorCallback.cpp:46:17: error: no member named 'MakeWeak' in 'v8::Object' m_callback->MakeWeak(this, &V8NavigatorUserMediaErrorCallback::weakCallback); ~~~~~~~~~~ ^ In file included from gen/webkit/bindings/V8DerivedSources02.cpp:49:
Eric Seidel (no email)
Comment 5
2012-11-29 13:45:53 PST
Comment on
attachment 176792
[details]
Patch LGTM.
WebKit Review Bot
Comment 6
2012-11-29 15:00:03 PST
Comment on
attachment 176792
[details]
Patch Clearing flags on attachment: 176792 Committed
r136168
: <
http://trac.webkit.org/changeset/136168
>
WebKit Review Bot
Comment 7
2012-11-29 15:00:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug