[V8] DOM callbacks shouldn't reimplement ScopedPersistent they should use it https://bugs.webkit.org/show_bug.cgi?id=103662

Reviewed by Eric Seidel.

This patch replaces yet another instance of the ScopedPersistent
pattern with ScopedPersistent.

* bindings/scripts/CodeGeneratorV8.pm:
(GenerateCallbackHeader):
(GenerateCallbackImplementation):
* bindings/v8/custom/V8CustomSQLStatementErrorCallback.cpp:
(WebCore::V8SQLStatementErrorCallback::handleEvent):
* bindings/v8/custom/V8MutationCallbackCustom.cpp:
(WebCore::V8MutationCallback::handleEvent):


Canonical link: https://commits.webkit.org/121788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136168 268f45cc-cd09-0410-ab3c-d52691b4dbfc