Source/WebCore/bindings/scripts/test/V8/V8TestCallback.cpp
@@ -41,19 +41,17 @@ namespace WebCore {
 
 V8TestCallback::V8TestCallback(v8::Handle<v8::Object> callback, ScriptExecutionContext* context, v8::Handle<v8::Object> owner)
     : ActiveDOMCallback(context)
-    , m_callback(v8::Persistent<v8::Object>::New(callback))
+    , m_callback(callback)
     , m_worldContext(UseCurrentWorld)
 {
-    if (!owner.IsEmpty()) {
-        owner->SetHiddenValue(V8HiddenPropertyName::callback(), callback);
-        m_callback.MakeWeak(this, &V8TestCallback::weakCallback);
-    }
+    if (owner.IsEmpty())
+        return;
+    owner->SetHiddenValue(V8HiddenPropertyName::callback(), callback);
+    m_callback.get().MakeWeak(this, &V8TestCallback::weakCallback);
 }
 
 V8TestCallback::~V8TestCallback()
 {
-    if (!m_callback.IsEmpty())
-        m_callback.Dispose();
 }
 
 // Functions
@@ -75,7 +73,7 @@ bool V8TestCallback::callbackWithNoParam()
     v8::Handle<v8::Value> *argv = 0;
 
     bool callbackReturnValue = false;
-    return !invokeCallback(m_callback, 0, argv, callbackReturnValue, scriptExecutionContext());
+    return !invokeCallback(m_callback.get(), 0, argv, callbackReturnValue, scriptExecutionContext());
 }
 
 bool V8TestCallback::callbackWithClass1Param(Class1* class1Param)
@@ -103,7 +101,7 @@ bool V8TestCallback::callbackWithClass1Param(Class1* class1Param)
     };
 
     bool callbackReturnValue = false;
-    return !invokeCallback(m_callback, 1, argv, callbackReturnValue, scriptExecutionContext());
+    return !invokeCallback(m_callback.get(), 1, argv, callbackReturnValue, scriptExecutionContext());
 }
 
 bool V8TestCallback::callbackWithClass2Param(Class2* class2Param, const String& strArg)
@@ -138,7 +136,7 @@ bool V8TestCallback::callbackWithClass2Param(Class2* class2Param, const String& 
     };
 
     bool callbackReturnValue = false;
-    return !invokeCallback(m_callback, 2, argv, callbackReturnValue, scriptExecutionContext());
+    return !invokeCallback(m_callback.get(), 2, argv, callbackReturnValue, scriptExecutionContext());
 }
 
 bool V8TestCallback::callbackWithStringList(RefPtr<DOMStringList> listParam)
@@ -166,7 +164,7 @@ bool V8TestCallback::callbackWithStringList(RefPtr<DOMStringList> listParam)
     };
 
     bool callbackReturnValue = false;
-    return !invokeCallback(m_callback, 1, argv, callbackReturnValue, scriptExecutionContext());
+    return !invokeCallback(m_callback.get(), 1, argv, callbackReturnValue, scriptExecutionContext());
 }
 
 bool V8TestCallback::callbackWithBoolean(bool boolParam)
@@ -194,7 +192,7 @@ bool V8TestCallback::callbackWithBoolean(bool boolParam)
     };
 
     bool callbackReturnValue = false;
-    return !invokeCallback(m_callback, 1, argv, callbackReturnValue, scriptExecutionContext());
+    return !invokeCallback(m_callback.get(), 1, argv, callbackReturnValue, scriptExecutionContext());
 }
 
 bool V8TestCallback::callbackRequiresThisToPass(Class8* class8Param, ThisClass* thisClassParam)
@@ -231,7 +229,7 @@ bool V8TestCallback::callbackRequiresThisToPass(Class8* class8Param, ThisClass* 
     };
 
     bool callbackReturnValue = false;
-    return !invokeCallback(m_callback, v8::Handle<v8::Object>::Cast(thisClassParamHandle), 2, argv, callbackReturnValue, scriptExecutionContext());
+    return !invokeCallback(m_callback.get(), v8::Handle<v8::Object>::Cast(thisClassParamHandle), 2, argv, callbackReturnValue, scriptExecutionContext());
 }
 
 } // namespace WebCore
